fix push conflicts collapse sidebar menu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -263,6 +263,10 @@ body {
                             font-weight: bold;
                         }
                     }
+
+                    .reports {
+                        margin-right: 3rem;
+                    }
                 }
 
                 .active {
